Added amd64 and arm64 platforms for services - build authentication-service