@@ -23,8 +23,9 @@
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
         <docker.image.name>${project.artifactId}</docker.image.name>
         <docker.image.from>openjdk:8-jre-alpine</docker.image.from>
-        <jib-maven-plugin.version>2.7.0</jib-maven-plugin.version>
         <code-coverage>0.8</code-coverage>
+        <dockerfile-maven-plugin.version>1.3.4</dockerfile-maven-plugin.version>
+        <docker.env.JAVA_OPTS>-Xmx512m -Dfile.encoding=UTF-8 -XX:+UseG1GC -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -Xloggc:/var/log/gc.log -Djava.security.egd=file:/dev/./urandom</docker.env.JAVA_OPTS>
     </properties>
 
     <modules>
@@ -78,9 +79,9 @@
             </plugin>
 
             <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>jib-maven-plugin</artifactId>
-                <version>${jib-maven-plugin.version}</version>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.34.1</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
